Part 2: adding DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=springBootTutorial
 server.port=8083
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/teaching_spring_boot
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
